@@ -262,6 +262,26 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginTop="0dp"
+            android:visibility="@{formData.serverUrlValidLive ? View.VISIBLE : View.GONE}"
+            android:onClick="@{() -> fragment.openHomeAssistantProfileWebsite()}"
+            app:contentPadding="16dp"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="12dp"
+            app:cardBackgroundColor="@color/on_background_variant">
+
+            <TextView
+              style="@style/Widget.Grocy.TextView.Paragraph"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:text="@{formData.serverUrlPortInfoLive}" />
+
+          </com.google.android.material.card.MaterialCardView>
+
+          <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="0dp"
             android:visibility="@{formData.usingGrocyHassAddOnLive &amp;&amp; formData.showHelpTexts ? View.VISIBLE : View.GONE}"
             android:onClick="@{() -> fragment.openHomeAssistantProfileWebsite()}"
             app:contentPadding="16dp"
