@@ -173,10 +173,8 @@
           style="@style/Widget.Grocy.TextInputLayout.FilledBox"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginBottom="4dp"
+          android:layout_marginBottom="16dp"
           android:hint="@string/hint_server"
-          app:helperTextEnabled="true"
-          app:helperText=" "
           app:errorText="@{formData.serverUrlErrorLive}">
 
           <com.google.android.material.textfield.TextInputEditText
@@ -190,6 +188,26 @@
             android:afterTextChanged="@{() -> formData.clearServerUrlErrorAndUpdateRadioButtons()}" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.card.MaterialCardView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="16dp"
+          android:layout_marginTop="0dp"
+          android:visibility="@{formData.serverUrlValidLive ? View.VISIBLE : View.GONE}"
+          android:clickable="false"
+          app:contentPadding="16dp"
+          app:cardElevation="0dp"
+          app:cardCornerRadius="12dp"
+          app:cardBackgroundColor="@color/on_background_variant">
+
+          <TextView
+            style="@style/Widget.Grocy.TextView.Paragraph"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{formData.serverUrlPortInfoLive}" />
+
+        </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
           android:layout_width="match_parent"
